@@ -1,3 +1,7 @@
+MGP v 1.12.4 5/30/25
+-------------------
+  * fixed getTestNumbers() to only look for billable IgG tests 
+
 MGP v 1.12.3 3/25/25
 -------------------
   * made function for determining if an allele is NMDP and replaced code accordingly
